# PAOO

lab1/src/: tutorial.cxx
src/: CMakeLists.txt  tutorial.cxx
src/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
tema1/src/: CMakeLists.txt  main.cxx
tema1/src/pet/: CMakeLists.txt  pet.cxx  petHeader.h
tema2/src/: CMakeLists.txt  main.cxx
tema2/src/cat/: cat.cxx  cat.h
tema2/src/dog/: CMakeLists.txt  dog.cxx  dog.h
tema2/src/pet/: CMakeLists.txt
tema2/src/sphynxCat/: CMakeLists.txt  sphynxCat.cxx
tema3/src/: CMakeLists.txt  main.cxx
tema3/src/cat/: CMakeLists.txt  cat.cxx
tema3/src/dog/: CMakeLists.txt  dog.cxx  dog.h
tema3/src/owner/: CMakeLists.txt  owner.cxx  owner.h
tema3/src/pet/: pet.h
tema3/src/sphynxCat/: sphynxCat.h
